--- a/styles.css
+++ b/styles.css
@@ -20,9 +20,8 @@ h1{
     margin: 2rem auto;
     width: 80%;
     max-width: 400px;
-
   }
-  
+
   #input label {
     margin-bottom: 1.0rem;
     color: #FFB500;
@@ -58,7 +57,7 @@ h1{
   }
   
   #input button[type="submit"]:hover {
-    background-color: #FFB500;
+    background-color: #372209;
     color: #FFB500;
   }
   
